kubernetes/apps/database/redisinsight/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight
  namespace: database
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cog"
spec:
  ingressClassName: internal
  rules:
    - host: "redisinsight.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-redisinsight-svc
                port:
                  number: 8001
  tls:
    - hosts:
        - "redisinsight.${SECRET_DOMAIN}"
